<resources>
    <string name="app_name">projekt_pum</string>
    <string name="flag_image">Flag of the country</string>
    <string name="title">Title</string>
    <string name="instructions" >Incstructions</string>
    <string name="ingredients">ingredients</string>
    <string name="servings">servings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="nazwa">Nazwa</string>
    <string name="ilosc">--/--/----</string>
    <string name="dodaj">Add</string>
    <string name="lista">Products</string>
    <string name="aktualizuj">aktualizuj</string>
    <string name="edytuj">Edit</string>
    <string name="delete_all">delete all</string>
    <string name="rationale_camera">aplikacja wymaga upoważnienia aby uzyskać dostęp do aparatu</string>
    <string name="error_imageView">Najpierw zrób zdjęcie</string>
    <string name="food_image">image of food</string>
    <string name="favorite_button">favoriteRecipe</string>
    <string name="recipes">Recipes</string>
    <string name="list">Add Product</string>

</resources>