<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/listFragment">
    <fragment
        android:id="@+id/listFragment"
        android:name="pl.edu.uwr.projekt_pum.fragments.ListFragment"
        android:label="@string/lista"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_listFragment_to_updateFragment"
            app:destination="@id/updateFragment" >
            <argument
                android:name="id"
                app:argType="integer" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="pl.edu.uwr.projekt_pum.fragments.AddFragment"
        android:label="@string/dodaj"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="pl.edu.uwr.projekt_pum.fragments.UpdateFragment"
        android:label="@string/edytuj"
        tools:layout="@layout/fragment_update" >
        <action
            android:id="@+id/action_updateFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/foodProductsFragment"
        android:name="pl.edu.uwr.projekt_pum.FoodProductsFragment"
        android:label="Recipes"
        tools:layout="@layout/fragment_rest_countries_list_capital" >

        <action
            android:id="@+id/action_foodProductsFragment_to_foodDetailFragment"
            app:destination="@id/foodDetailFragment" >
            <argument
                android:name="title"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/foodDetailFragment"
        android:name="pl.edu.uwr.projekt_pum.FoodDetailFragment"
        android:label="fragment_food_detail"
        tools:layout="@layout/fragment_food_detail" >
        <action
            android:id="@+id/action_foodDetailFragment_to_foodProductsFragment"
            app:destination="@id/foodProductsFragment" />

    </fragment>
</navigation>