<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DetailActivity">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title"
            android:textSize="28dp"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:src="@drawable/ic_line"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="22dp"
            android:text="@string/servings"
            android:textStyle="bold"
            android:layout_alignBottom="@id/title"
            android:textColor="?android:textColorSecondary" />
        <TextView
            android:id="@+id/ingredients_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/servings"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="21dp"
            android:layout_alignBottom="@id/servings"
            android:text="Ingredients:" />
        <TextView
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/servings"
            android:padding="8dp"
            android:textSize="21dp"
            android:layout_alignBottom="@id/servings"
            android:text="@string/ingredients" />
        <TextView
            android:id="@+id/instructions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/servings"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="21dp"
            android:layout_alignBottom="@id/servings"
            android:text="Instructions:" />
        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="21dp"
            android:layout_alignBottom="@id/ingredients"
            android:text="@string/instructions" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="181dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="182dp"
            android:background="@android:color/transparent"
            android:visibility="invisible" />
<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/favoriteButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:contentDescription="@string/favorite_button"-->
<!--            android:src="@drawable/ic_favorite_border" />-->
    </LinearLayout>
</ScrollView>